test/syc/good/packed.c
/*
 * Packed structure.
 *
 * Note that currently this has no effect, all structures are always
 * packed.
 */

typedef struct s {
} __attribute__((packed)) mystruct_t;
